# serializer version: 1
# name: test_distinct_and_order_by[session-async-tracked-aiosqlite_engine]
  '''
  SELECT user.name,
         user.id
    FROM (
          SELECT anon_1.id AS id,
                 anon_1.name AS name
            FROM (
                  SELECT user.id AS id,
                         user.name AS name,
                         row_number() OVER (PARTITION BY user.name ORDER BY user.name ASC, user.id DESC) AS anon_2
                    FROM USER AS USER
                   ORDER BY user.name ASC,
                            user.id DESC
                 ) AS anon_1
           WHERE anon_1.anon_2 = ?
           ORDER BY anon_1.name ASC,
                    anon_1.id DESC
         ) AS USER
   ORDER BY user.name ASC,
            user.id DESC
  '''
# ---
# name: test_distinct_and_order_by[session-async-tracked-asyncmy_engine]
  '''
  SELECT user.name,
         user.id
    FROM (
          SELECT anon_1.id AS id,
                 anon_1.name AS name
            FROM (
                  SELECT user.id AS id,
                         user.name AS name,
                         row_number() OVER (PARTITION BY user.name ORDER BY user.name ASC, user.id DESC) AS anon_2
                    FROM USER AS USER
                   ORDER BY user.name ASC,
                            user.id DESC
                 ) AS anon_1
           WHERE anon_1.anon_2 = %s
           ORDER BY anon_1.name ASC,
                    anon_1.id DESC
         ) AS USER
   ORDER BY user.name ASC,
            user.id DESC
  '''
# ---
# name: test_distinct_and_order_by[session-async-tracked-asyncpg_engine]
  '''
  SELECT DISTINCT
      ON ("user".name) "user".name,
         "user".id
    FROM "user" AS "user"
   ORDER BY "user".name ASC,
            "user".id DESC
  '''
# ---
# name: test_distinct_and_order_by[session-async-tracked-psycopg_async_engine]
  '''
  SELECT DISTINCT
      ON ("user".name) "user".name,
         "user".id
    FROM "user" AS "user"
   ORDER BY "user".name ASC,
            "user".id DESC
  '''
# ---
# name: test_distinct_and_order_by[session-sync-tracked-psycopg_engine]
  '''
  SELECT DISTINCT
      ON ("user".name) "user".name,
         "user".id
    FROM "user" AS "user"
   ORDER BY "user".name ASC,
            "user".id DESC
  '''
# ---
# name: test_distinct_and_order_by[session-sync-tracked-sqlite_engine]
  '''
  SELECT user.name,
         user.id
    FROM (
          SELECT anon_1.id AS id,
                 anon_1.name AS name
            FROM (
                  SELECT user.id AS id,
                         user.name AS name,
                         row_number() OVER (PARTITION BY user.name ORDER BY user.name ASC, user.id DESC) AS anon_2
                    FROM USER AS USER
                   ORDER BY user.name ASC,
                            user.id DESC
                 ) AS anon_1
           WHERE anon_1.anon_2 = ?
           ORDER BY anon_1.name ASC,
                    anon_1.id DESC
         ) AS USER
   ORDER BY user.name ASC,
            user.id DESC
  '''
# ---
# name: test_distinct_on[session-async-tracked-deterministic-ordering-aiosqlite_engine]
  '''
  SELECT user.name,
         user.id
    FROM (
          SELECT anon_1.id AS id,
                 anon_1.name AS name
            FROM (
                  SELECT user.id AS id,
                         user.name AS name,
                         row_number() OVER (PARTITION BY user.name ORDER BY user.id ASC) AS anon_2
                    FROM USER AS USER
                   ORDER BY user.id ASC
                 ) AS anon_1
           WHERE anon_1.anon_2 = ?
           ORDER BY anon_1.id ASC
         ) AS USER
   ORDER BY user.id ASC
  '''
# ---
# name: test_distinct_on[session-async-tracked-deterministic-ordering-asyncmy_engine]
  '''
  SELECT user.name,
         user.id
    FROM (
          SELECT anon_1.id AS id,
                 anon_1.name AS name
            FROM (
                  SELECT user.id AS id,
                         user.name AS name,
                         row_number() OVER (PARTITION BY user.name ORDER BY user.id ASC) AS anon_2
                    FROM USER AS USER
                   ORDER BY user.id ASC
                 ) AS anon_1
           WHERE anon_1.anon_2 = %s
           ORDER BY anon_1.id ASC
         ) AS USER
   ORDER BY user.id ASC
  '''
# ---
# name: test_distinct_on[session-async-tracked-deterministic-ordering-asyncpg_engine]
  '''
  SELECT "user".name,
         "user".id
    FROM (
          SELECT anon_1.id AS id,
                 anon_1.name AS name
            FROM (
                  SELECT "user".id AS id,
                         "user".name AS name,
                         row_number() OVER (PARTITION BY "user".name ORDER BY "user".id ASC) AS anon_2
                    FROM "user" AS "user"
                   ORDER BY "user".id ASC
                 ) AS anon_1
           WHERE anon_1.anon_2 = $1::INTEGER
           ORDER BY anon_1.id ASC
         ) AS "user"
   ORDER BY "user".id ASC
  '''
# ---
# name: test_distinct_on[session-async-tracked-deterministic-ordering-psycopg_async_engine]
  '''
  SELECT "user".name,
         "user".id
    FROM (
          SELECT anon_1.id AS id,
                 anon_1.name AS name
            FROM (
                  SELECT "user".id AS id,
                         "user".name AS name,
                         row_number() OVER (PARTITION BY "user".name ORDER BY "user".id ASC) AS anon_2
                    FROM "user" AS "user"
                   ORDER BY "user".id ASC
                 ) AS anon_1
           WHERE anon_1.anon_2 = %(param_1)s::INTEGER
           ORDER BY anon_1.id ASC
         ) AS "user"
   ORDER BY "user".id ASC
  '''
# ---
# name: test_distinct_on[session-async-tracked-non-deterministic-ordering-aiosqlite_engine]
  '''
  SELECT user.name,
         user.id
    FROM (
          SELECT anon_1.id AS id,
                 anon_1.name AS name
            FROM (
                  SELECT user.id AS id,
                         user.name AS name,
                         row_number() OVER (PARTITION BY user.name) AS anon_2
                    FROM USER AS USER
                 ) AS anon_1
           WHERE anon_1.anon_2 = ?
         ) AS USER
  '''
# ---
# name: test_distinct_on[session-async-tracked-non-deterministic-ordering-asyncmy_engine]
  '''
  SELECT user.name,
         user.id
    FROM (
          SELECT anon_1.id AS id,
                 anon_1.name AS name
            FROM (
                  SELECT user.id AS id,
                         user.name AS name,
                         row_number() OVER (PARTITION BY user.name) AS anon_2
                    FROM USER AS USER
                 ) AS anon_1
           WHERE anon_1.anon_2 = %s
         ) AS USER
  '''
# ---
# name: test_distinct_on[session-async-tracked-non-deterministic-ordering-asyncpg_engine]
  '''
  SELECT DISTINCT
      ON ("user".name) "user".name,
         "user".id
    FROM "user" AS "user"
  '''
# ---
# name: test_distinct_on[session-async-tracked-non-deterministic-ordering-psycopg_async_engine]
  '''
  SELECT DISTINCT
      ON ("user".name) "user".name,
         "user".id
    FROM "user" AS "user"
  '''
# ---
# name: test_distinct_on[session-sync-tracked-deterministic-ordering-psycopg_engine]
  '''
  SELECT "user".name,
         "user".id
    FROM (
          SELECT anon_1.id AS id,
                 anon_1.name AS name
            FROM (
                  SELECT "user".id AS id,
                         "user".name AS name,
                         row_number() OVER (PARTITION BY "user".name ORDER BY "user".id ASC) AS anon_2
                    FROM "user" AS "user"
                   ORDER BY "user".id ASC
                 ) AS anon_1
           WHERE anon_1.anon_2 = %(param_1)s::INTEGER
           ORDER BY anon_1.id ASC
         ) AS "user"
   ORDER BY "user".id ASC
  '''
# ---
# name: test_distinct_on[session-sync-tracked-deterministic-ordering-sqlite_engine]
  '''
  SELECT user.name,
         user.id
    FROM (
          SELECT anon_1.id AS id,
                 anon_1.name AS name
            FROM (
                  SELECT user.id AS id,
                         user.name AS name,
                         row_number() OVER (PARTITION BY user.name ORDER BY user.id ASC) AS anon_2
                    FROM USER AS USER
                   ORDER BY user.id ASC
                 ) AS anon_1
           WHERE anon_1.anon_2 = ?
           ORDER BY anon_1.id ASC
         ) AS USER
   ORDER BY user.id ASC
  '''
# ---
# name: test_distinct_on[session-sync-tracked-non-deterministic-ordering-psycopg_engine]
  '''
  SELECT DISTINCT
      ON ("user".name) "user".name,
         "user".id
    FROM "user" AS "user"
  '''
# ---
# name: test_distinct_on[session-sync-tracked-non-deterministic-ordering-sqlite_engine]
  '''
  SELECT user.name,
         user.id
    FROM (
          SELECT anon_1.id AS id,
                 anon_1.name AS name
            FROM (
                  SELECT user.id AS id,
                         user.name AS name,
                         row_number() OVER (PARTITION BY user.name) AS anon_2
                    FROM USER AS USER
                 ) AS anon_1
           WHERE anon_1.anon_2 = ?
         ) AS USER
  '''
# ---
# name: test_distinct_on_deduplicates_root_rows_selecting_a_to_many_relation[session-async-tracked-aiosqlite_engine]
  '''
  SELECT fruit_1.name,
         fruit_1.id,
         color_1.id AS id_1,
         fruit.name AS name_1,
         fruit.id AS id_2
    FROM (
          SELECT anon_1.name AS name,
                 anon_1.sweetness AS sweetness,
                 anon_1.id AS id,
                 anon_1.color_id AS color_id
            FROM (
                  SELECT fruit.name AS name,
                         fruit.sweetness AS sweetness,
                         fruit.id AS id,
                         fruit.color_id AS color_id,
                         row_number() OVER (PARTITION BY fruit.sweetness ORDER BY fruit.sweetness ASC, fruit.name ASC) AS anon_2
                    FROM fruit AS fruit
                   ORDER BY fruit.sweetness ASC,
                            fruit.name ASC
                 ) AS anon_1
           WHERE anon_1.anon_2 = ?
           ORDER BY anon_1.sweetness ASC,
                    anon_1.name ASC
         ) AS fruit
    LEFT OUTER JOIN color AS color_1
      ON color_1.id = fruit.color_id
    LEFT OUTER JOIN fruit AS fruit_1
      ON color_1.id = fruit_1.color_id
   ORDER BY fruit.sweetness ASC,
            fruit.name ASC,
            color_1.id ASC,
            fruit_1.id ASC
  '''
# ---
# name: test_distinct_on_deduplicates_root_rows_selecting_a_to_many_relation[session-async-tracked-asyncmy_engine]
  '''
  SELECT fruit_1.name,
         fruit_1.id,
         color_1.id AS id_1,
         fruit.name AS name_1,
         fruit.id AS id_2
    FROM (
          SELECT anon_1.name AS name,
                 anon_1.sweetness AS sweetness,
                 anon_1.id AS id,
                 anon_1.color_id AS color_id
            FROM (
                  SELECT fruit.name AS name,
                         fruit.sweetness AS sweetness,
                         fruit.id AS id,
                         fruit.color_id AS color_id,
                         row_number() OVER (PARTITION BY fruit.sweetness ORDER BY fruit.sweetness ASC, fruit.name ASC) AS anon_2
                    FROM fruit AS fruit
                   ORDER BY fruit.sweetness ASC,
                            fruit.name ASC
                 ) AS anon_1
           WHERE anon_1.anon_2 = %s
           ORDER BY anon_1.sweetness ASC,
                    anon_1.name ASC
         ) AS fruit
    LEFT OUTER JOIN color AS color_1
      ON color_1.id = fruit.color_id
    LEFT OUTER JOIN fruit AS fruit_1
      ON color_1.id = fruit_1.color_id
   ORDER BY fruit.sweetness ASC,
            fruit.name ASC,
            color_1.id ASC,
            fruit_1.id ASC
  '''
# ---
# name: test_distinct_on_deduplicates_root_rows_selecting_a_to_many_relation[session-async-tracked-asyncpg_engine]
  '''
  SELECT fruit_1.name,
         fruit_1.id,
         color_1.id AS id_1,
         fruit.name AS name_1,
         fruit.id AS id_2
    FROM (
          SELECT DISTINCT
              ON (fruit.sweetness) fruit.name AS name,
                 fruit.sweetness AS sweetness,
                 fruit.id AS id,
                 fruit.color_id AS color_id
            FROM fruit AS fruit
           ORDER BY fruit.sweetness ASC,
                    fruit.name ASC
         ) AS fruit
    LEFT OUTER JOIN color AS color_1
      ON color_1.id = fruit.color_id
    LEFT OUTER JOIN fruit AS fruit_1
      ON color_1.id = fruit_1.color_id
   ORDER BY fruit.sweetness ASC,
            fruit.name ASC,
            color_1.id ASC,
            fruit_1.id ASC
  '''
# ---
# name: test_distinct_on_deduplicates_root_rows_selecting_a_to_many_relation[session-async-tracked-psycopg_async_engine]
  '''
  SELECT fruit_1.name,
         fruit_1.id,
         color_1.id AS id_1,
         fruit.name AS name_1,
         fruit.id AS id_2
    FROM (
          SELECT DISTINCT
              ON (fruit.sweetness) fruit.name AS name,
                 fruit.sweetness AS sweetness,
                 fruit.id AS id,
                 fruit.color_id AS color_id
            FROM fruit AS fruit
           ORDER BY fruit.sweetness ASC,
                    fruit.name ASC
         ) AS fruit
    LEFT OUTER JOIN color AS color_1
      ON color_1.id = fruit.color_id
    LEFT OUTER JOIN fruit AS fruit_1
      ON color_1.id = fruit_1.color_id
   ORDER BY fruit.sweetness ASC,
            fruit.name ASC,
            color_1.id ASC,
            fruit_1.id ASC
  '''
# ---
# name: test_distinct_on_deduplicates_root_rows_selecting_a_to_many_relation[session-sync-tracked-psycopg_engine]
  '''
  SELECT fruit_1.name,
         fruit_1.id,
         color_1.id AS id_1,
         fruit.name AS name_1,
         fruit.id AS id_2
    FROM (
          SELECT DISTINCT
              ON (fruit.sweetness) fruit.name AS name,
                 fruit.sweetness AS sweetness,
                 fruit.id AS id,
                 fruit.color_id AS color_id
            FROM fruit AS fruit
           ORDER BY fruit.sweetness ASC,
                    fruit.name ASC
         ) AS fruit
    LEFT OUTER JOIN color AS color_1
      ON color_1.id = fruit.color_id
    LEFT OUTER JOIN fruit AS fruit_1
      ON color_1.id = fruit_1.color_id
   ORDER BY fruit.sweetness ASC,
            fruit.name ASC,
            color_1.id ASC,
            fruit_1.id ASC
  '''
# ---
# name: test_distinct_on_deduplicates_root_rows_selecting_a_to_many_relation[session-sync-tracked-sqlite_engine]
  '''
  SELECT fruit_1.name,
         fruit_1.id,
         color_1.id AS id_1,
         fruit.name AS name_1,
         fruit.id AS id_2
    FROM (
          SELECT anon_1.name AS name,
                 anon_1.sweetness AS sweetness,
                 anon_1.id AS id,
                 anon_1.color_id AS color_id
            FROM (
                  SELECT fruit.name AS name,
                         fruit.sweetness AS sweetness,
                         fruit.id AS id,
                         fruit.color_id AS color_id,
                         row_number() OVER (PARTITION BY fruit.sweetness ORDER BY fruit.sweetness ASC, fruit.name ASC) AS anon_2
                    FROM fruit AS fruit
                   ORDER BY fruit.sweetness ASC,
                            fruit.name ASC
                 ) AS anon_1
           WHERE anon_1.anon_2 = ?
           ORDER BY anon_1.sweetness ASC,
                    anon_1.name ASC
         ) AS fruit
    LEFT OUTER JOIN color AS color_1
      ON color_1.id = fruit.color_id
    LEFT OUTER JOIN fruit AS fruit_1
      ON color_1.id = fruit_1.color_id
   ORDER BY fruit.sweetness ASC,
            fruit.name ASC,
            color_1.id ASC,
            fruit_1.id ASC
  '''
# ---
# name: test_distinct_on_keeps_every_child_of_a_to_many_relation[session-async-tracked-paginated-aiosqlite_engine]
  '''
  SELECT fruit_1.name,
         fruit_1.id,
         color.name AS name_1,
         color.id AS id_1
    FROM (
          SELECT anon_1.name AS name,
                 anon_1.id AS id
            FROM (
                  SELECT color.name AS name,
                         color.id AS id,
                         row_number() OVER (PARTITION BY color.name ORDER BY color.name ASC) AS anon_2
                    FROM color AS color
                   WHERE color.name IN (__[POSTCOMPILE_name_2])
                   ORDER BY color.name ASC
                 ) AS anon_1
           WHERE anon_1.anon_2 = ?
           ORDER BY anon_1.name ASC
           LIMIT ?
          OFFSET ?
         ) AS color
    LEFT OUTER JOIN fruit AS fruit_1
      ON color.id = fruit_1.color_id
   ORDER BY color.name ASC,
            fruit_1.id ASC
  '''
# ---
# name: test_distinct_on_keeps_every_child_of_a_to_many_relation[session-async-tracked-paginated-asyncmy_engine]
  '''
  SELECT fruit_1.name,
         fruit_1.id,
         color.name AS name_1,
         color.id AS id_1
    FROM (
          SELECT anon_1.name AS name,
                 anon_1.id AS id
            FROM (
                  SELECT color.name AS name,
                         color.id AS id,
                         row_number() OVER (PARTITION BY color.name ORDER BY color.name ASC) AS anon_2
                    FROM color AS color
                   WHERE color.name IN (__[POSTCOMPILE_name_2])
                   ORDER BY color.name ASC
                 ) AS anon_1
           WHERE anon_1.anon_2 = %s
           ORDER BY anon_1.name ASC
           LIMIT %s,
                 %s
         ) AS color
    LEFT OUTER JOIN fruit AS fruit_1
      ON color.id = fruit_1.color_id
   ORDER BY color.name ASC,
            fruit_1.id ASC
  '''
# ---
# name: test_distinct_on_keeps_every_child_of_a_to_many_relation[session-async-tracked-paginated-asyncpg_engine]
  '''
  SELECT fruit_1.name,
         fruit_1.id,
         color.name AS name_1,
         color.id AS id_1
    FROM (
          SELECT DISTINCT
              ON (color.name) color.name AS name,
                 color.id AS id
            FROM color AS color
           WHERE color.name IN (__[POSTCOMPILE_name_2])
           ORDER BY color.name ASC
           LIMIT $1::INTEGER
          OFFSET $2::INTEGER
         ) AS color
    LEFT OUTER JOIN fruit AS fruit_1
      ON color.id = fruit_1.color_id
   ORDER BY color.name ASC,
            fruit_1.id ASC
  '''
# ---
# name: test_distinct_on_keeps_every_child_of_a_to_many_relation[session-async-tracked-paginated-psycopg_async_engine]
  '''
  SELECT fruit_1.name,
         fruit_1.id,
         color.name AS name_1,
         color.id AS id_1
    FROM (
          SELECT DISTINCT
              ON (color.name) color.name AS name,
                 color.id AS id
            FROM color AS color
           WHERE color.name IN (__[POSTCOMPILE_name_2])
           ORDER BY color.name ASC
           LIMIT %(param_1)s::INTEGER
          OFFSET %(param_2)s::INTEGER
         ) AS color
    LEFT OUTER JOIN fruit AS fruit_1
      ON color.id = fruit_1.color_id
   ORDER BY color.name ASC,
            fruit_1.id ASC
  '''
# ---
# name: test_distinct_on_keeps_every_child_of_a_to_many_relation[session-async-tracked-to-many-aiosqlite_engine]
  '''
  SELECT fruit_1.name,
         fruit_1.id,
         color.name AS name_1,
         color.id AS id_1
    FROM (
          SELECT anon_1.name AS name,
                 anon_1.id AS id
            FROM (
                  SELECT color.name AS name,
                         color.id AS id,
                         row_number() OVER (PARTITION BY color.name ORDER BY color.name ASC) AS anon_2
                    FROM color AS color
                   ORDER BY color.name ASC
                 ) AS anon_1
           WHERE anon_1.anon_2 = ?
           ORDER BY anon_1.name ASC
         ) AS color
    LEFT OUTER JOIN fruit AS fruit_1
      ON color.id = fruit_1.color_id
   ORDER BY color.name ASC,
            fruit_1.id ASC
  '''
# ---
# name: test_distinct_on_keeps_every_child_of_a_to_many_relation[session-async-tracked-to-many-asyncmy_engine]
  '''
  SELECT fruit_1.name,
         fruit_1.id,
         color.name AS name_1,
         color.id AS id_1
    FROM (
          SELECT anon_1.name AS name,
                 anon_1.id AS id
            FROM (
                  SELECT color.name AS name,
                         color.id AS id,
                         row_number() OVER (PARTITION BY color.name ORDER BY color.name ASC) AS anon_2
                    FROM color AS color
                   ORDER BY color.name ASC
                 ) AS anon_1
           WHERE anon_1.anon_2 = %s
           ORDER BY anon_1.name ASC
         ) AS color
    LEFT OUTER JOIN fruit AS fruit_1
      ON color.id = fruit_1.color_id
   ORDER BY color.name ASC,
            fruit_1.id ASC
  '''
# ---
# name: test_distinct_on_keeps_every_child_of_a_to_many_relation[session-async-tracked-to-many-asyncpg_engine]
  '''
  SELECT fruit_1.name,
         fruit_1.id,
         color.name AS name_1,
         color.id AS id_1
    FROM (
          SELECT DISTINCT
              ON (color.name) color.name AS name,
                 color.id AS id
            FROM color AS color
           ORDER BY color.name ASC
         ) AS color
    LEFT OUTER JOIN fruit AS fruit_1
      ON color.id = fruit_1.color_id
   ORDER BY color.name ASC,
            fruit_1.id ASC
  '''
# ---
# name: test_distinct_on_keeps_every_child_of_a_to_many_relation[session-async-tracked-to-many-psycopg_async_engine]
  '''
  SELECT fruit_1.name,
         fruit_1.id,
         color.name AS name_1,
         color.id AS id_1
    FROM (
          SELECT DISTINCT
              ON (color.name) color.name AS name,
                 color.id AS id
            FROM color AS color
           ORDER BY color.name ASC
         ) AS color
    LEFT OUTER JOIN fruit AS fruit_1
      ON color.id = fruit_1.color_id
   ORDER BY color.name ASC,
            fruit_1.id ASC
  '''
# ---
# name: test_distinct_on_keeps_every_child_of_a_to_many_relation[session-sync-tracked-paginated-psycopg_engine]
  '''
  SELECT fruit_1.name,
         fruit_1.id,
         color.name AS name_1,
         color.id AS id_1
    FROM (
          SELECT DISTINCT
              ON (color.name) color.name AS name,
                 color.id AS id
            FROM color AS color
           WHERE color.name IN (__[POSTCOMPILE_name_2])
           ORDER BY color.name ASC
           LIMIT %(param_1)s::INTEGER
          OFFSET %(param_2)s::INTEGER
         ) AS color
    LEFT OUTER JOIN fruit AS fruit_1
      ON color.id = fruit_1.color_id
   ORDER BY color.name ASC,
            fruit_1.id ASC
  '''
# ---
# name: test_distinct_on_keeps_every_child_of_a_to_many_relation[session-sync-tracked-paginated-sqlite_engine]
  '''
  SELECT fruit_1.name,
         fruit_1.id,
         color.name AS name_1,
         color.id AS id_1
    FROM (
          SELECT anon_1.name AS name,
                 anon_1.id AS id
            FROM (
                  SELECT color.name AS name,
                         color.id AS id,
                         row_number() OVER (PARTITION BY color.name ORDER BY color.name ASC) AS anon_2
                    FROM color AS color
                   WHERE color.name IN (__[POSTCOMPILE_name_2])
                   ORDER BY color.name ASC
                 ) AS anon_1
           WHERE anon_1.anon_2 = ?
           ORDER BY anon_1.name ASC
           LIMIT ?
          OFFSET ?
         ) AS color
    LEFT OUTER JOIN fruit AS fruit_1
      ON color.id = fruit_1.color_id
   ORDER BY color.name ASC,
            fruit_1.id ASC
  '''
# ---
# name: test_distinct_on_keeps_every_child_of_a_to_many_relation[session-sync-tracked-to-many-psycopg_engine]
  '''
  SELECT fruit_1.name,
         fruit_1.id,
         color.name AS name_1,
         color.id AS id_1
    FROM (
          SELECT DISTINCT
              ON (color.name) color.name AS name,
                 color.id AS id
            FROM color AS color
           ORDER BY color.name ASC
         ) AS color
    LEFT OUTER JOIN fruit AS fruit_1
      ON color.id = fruit_1.color_id
   ORDER BY color.name ASC,
            fruit_1.id ASC
  '''
# ---
# name: test_distinct_on_keeps_every_child_of_a_to_many_relation[session-sync-tracked-to-many-sqlite_engine]
  '''
  SELECT fruit_1.name,
         fruit_1.id,
         color.name AS name_1,
         color.id AS id_1
    FROM (
          SELECT anon_1.name AS name,
                 anon_1.id AS id
            FROM (
                  SELECT color.name AS name,
                         color.id AS id,
                         row_number() OVER (PARTITION BY color.name ORDER BY color.name ASC) AS anon_2
                    FROM color AS color
                   ORDER BY color.name ASC
                 ) AS anon_1
           WHERE anon_1.anon_2 = ?
           ORDER BY anon_1.name ASC
         ) AS color
    LEFT OUTER JOIN fruit AS fruit_1
      ON color.id = fruit_1.color_id
   ORDER BY color.name ASC,
            fruit_1.id ASC
  '''
# ---
# name: test_distinct_on_keeps_every_child_of_a_to_many_relation_behind_a_to_one[session-async-tracked-aiosqlite_engine]
  '''
  SELECT fruit_1.name,
         fruit_1.id,
         color_1.id AS id_1,
         fruit.name AS name_1,
         fruit.id AS id_2
    FROM (
          SELECT anon_1.name AS name,
                 anon_1.id AS id,
                 anon_1.color_id AS color_id
            FROM (
                  SELECT fruit.name AS name,
                         fruit.id AS id,
                         fruit.color_id AS color_id,
                         row_number() OVER (PARTITION BY fruit.name ORDER BY fruit.name ASC) AS anon_2
                    FROM fruit AS fruit
                   ORDER BY fruit.name ASC
                 ) AS anon_1
           WHERE anon_1.anon_2 = ?
           ORDER BY anon_1.name ASC
         ) AS fruit
    LEFT OUTER JOIN color AS color_1
      ON color_1.id = fruit.color_id
    LEFT OUTER JOIN fruit AS fruit_1
      ON color_1.id = fruit_1.color_id
   ORDER BY fruit.name ASC,
            color_1.id ASC,
            fruit_1.id ASC
  '''
# ---
# name: test_distinct_on_keeps_every_child_of_a_to_many_relation_behind_a_to_one[session-async-tracked-asyncmy_engine]
  '''
  SELECT fruit_1.name,
         fruit_1.id,
         color_1.id AS id_1,
         fruit.name AS name_1,
         fruit.id AS id_2
    FROM (
          SELECT anon_1.name AS name,
                 anon_1.id AS id,
                 anon_1.color_id AS color_id
            FROM (
                  SELECT fruit.name AS name,
                         fruit.id AS id,
                         fruit.color_id AS color_id,
                         row_number() OVER (PARTITION BY fruit.name ORDER BY fruit.name ASC) AS anon_2
                    FROM fruit AS fruit
                   ORDER BY fruit.name ASC
                 ) AS anon_1
           WHERE anon_1.anon_2 = %s
           ORDER BY anon_1.name ASC
         ) AS fruit
    LEFT OUTER JOIN color AS color_1
      ON color_1.id = fruit.color_id
    LEFT OUTER JOIN fruit AS fruit_1
      ON color_1.id = fruit_1.color_id
   ORDER BY fruit.name ASC,
            color_1.id ASC,
            fruit_1.id ASC
  '''
# ---
# name: test_distinct_on_keeps_every_child_of_a_to_many_relation_behind_a_to_one[session-async-tracked-asyncpg_engine]
  '''
  SELECT fruit_1.name,
         fruit_1.id,
         color_1.id AS id_1,
         fruit.name AS name_1,
         fruit.id AS id_2
    FROM (
          SELECT DISTINCT
              ON (fruit.name) fruit.name AS name,
                 fruit.id AS id,
                 fruit.color_id AS color_id
            FROM fruit AS fruit
           ORDER BY fruit.name ASC
         ) AS fruit
    LEFT OUTER JOIN color AS color_1
      ON color_1.id = fruit.color_id
    LEFT OUTER JOIN fruit AS fruit_1
      ON color_1.id = fruit_1.color_id
   ORDER BY fruit.name ASC,
            color_1.id ASC,
            fruit_1.id ASC
  '''
# ---
# name: test_distinct_on_keeps_every_child_of_a_to_many_relation_behind_a_to_one[session-async-tracked-psycopg_async_engine]
  '''
  SELECT fruit_1.name,
         fruit_1.id,
         color_1.id AS id_1,
         fruit.name AS name_1,
         fruit.id AS id_2
    FROM (
          SELECT DISTINCT
              ON (fruit.name) fruit.name AS name,
                 fruit.id AS id,
                 fruit.color_id AS color_id
            FROM fruit AS fruit
           ORDER BY fruit.name ASC
         ) AS fruit
    LEFT OUTER JOIN color AS color_1
      ON color_1.id = fruit.color_id
    LEFT OUTER JOIN fruit AS fruit_1
      ON color_1.id = fruit_1.color_id
   ORDER BY fruit.name ASC,
            color_1.id ASC,
            fruit_1.id ASC
  '''
# ---
# name: test_distinct_on_keeps_every_child_of_a_to_many_relation_behind_a_to_one[session-sync-tracked-psycopg_engine]
  '''
  SELECT fruit_1.name,
         fruit_1.id,
         color_1.id AS id_1,
         fruit.name AS name_1,
         fruit.id AS id_2
    FROM (
          SELECT DISTINCT
              ON (fruit.name) fruit.name AS name,
                 fruit.id AS id,
                 fruit.color_id AS color_id
            FROM fruit AS fruit
           ORDER BY fruit.name ASC
         ) AS fruit
    LEFT OUTER JOIN color AS color_1
      ON color_1.id = fruit.color_id
    LEFT OUTER JOIN fruit AS fruit_1
      ON color_1.id = fruit_1.color_id
   ORDER BY fruit.name ASC,
            color_1.id ASC,
            fruit_1.id ASC
  '''
# ---
# name: test_distinct_on_keeps_every_child_of_a_to_many_relation_behind_a_to_one[session-sync-tracked-sqlite_engine]
  '''
  SELECT fruit_1.name,
         fruit_1.id,
         color_1.id AS id_1,
         fruit.name AS name_1,
         fruit.id AS id_2
    FROM (
          SELECT anon_1.name AS name,
                 anon_1.id AS id,
                 anon_1.color_id AS color_id
            FROM (
                  SELECT fruit.name AS name,
                         fruit.id AS id,
                         fruit.color_id AS color_id,
                         row_number() OVER (PARTITION BY fruit.name ORDER BY fruit.name ASC) AS anon_2
                    FROM fruit AS fruit
                   ORDER BY fruit.name ASC
                 ) AS anon_1
           WHERE anon_1.anon_2 = ?
           ORDER BY anon_1.name ASC
         ) AS fruit
    LEFT OUTER JOIN color AS color_1
      ON color_1.id = fruit.color_id
    LEFT OUTER JOIN fruit AS fruit_1
      ON color_1.id = fruit_1.color_id
   ORDER BY fruit.name ASC,
            color_1.id ASC,
            fruit_1.id ASC
  '''
# ---
# name: test_distinct_on_ordered_by_an_unselected_to_many_relation[session-async-tracked-aiosqlite_engine]
  '''
  SELECT color.name,
         color.id
    FROM (
          SELECT anon_1.id AS id,
                 anon_1.name AS name,
                 anon_1.name_1 AS name_1
            FROM (
                  SELECT color.id AS id,
                         color.name AS name,
                         fruit_1.name AS name_1,
                         row_number() OVER (PARTITION BY color.name ORDER BY color.name ASC, fruit_1.name DESC) AS anon_2
                    FROM color AS color
                    LEFT OUTER JOIN fruit AS fruit_1
                      ON color.id = fruit_1.color_id
                   ORDER BY color.name ASC,
                            fruit_1.name DESC
                 ) AS anon_1
           WHERE anon_1.anon_2 = ?
           ORDER BY anon_1.name ASC,
                    anon_1.name_1 DESC
         ) AS color
    LEFT OUTER JOIN fruit AS fruit_1
      ON color.id = fruit_1.color_id
   ORDER BY color.name ASC,
            fruit_1.name DESC
  '''
# ---
# name: test_distinct_on_ordered_by_an_unselected_to_many_relation[session-async-tracked-asyncmy_engine]
  '''
  SELECT color.name,
         color.id
    FROM (
          SELECT anon_1.id AS id,
                 anon_1.name AS name,
                 anon_1.name_1 AS name_1
            FROM (
                  SELECT color.id AS id,
                         color.name AS name,
                         fruit_1.name AS name_1,
                         row_number() OVER (PARTITION BY color.name ORDER BY color.name ASC, fruit_1.name DESC) AS anon_2
                    FROM color AS color
                    LEFT OUTER JOIN fruit AS fruit_1
                      ON color.id = fruit_1.color_id
                   ORDER BY color.name ASC,
                            fruit_1.name DESC
                 ) AS anon_1
           WHERE anon_1.anon_2 = %s
           ORDER BY anon_1.name ASC,
                    anon_1.name_1 DESC
         ) AS color
    LEFT OUTER JOIN fruit AS fruit_1
      ON color.id = fruit_1.color_id
   ORDER BY color.name ASC,
            fruit_1.name DESC
  '''
# ---
# name: test_distinct_on_ordered_by_an_unselected_to_many_relation[session-async-tracked-asyncpg_engine]
  '''
  SELECT DISTINCT
      ON (color.name) color.name,
         color.id,
         fruit_1.name AS name_1
    FROM color AS color
    LEFT OUTER JOIN fruit AS fruit_1
      ON color.id = fruit_1.color_id
   ORDER BY color.name ASC,
            fruit_1.name DESC
  '''
# ---
# name: test_distinct_on_ordered_by_an_unselected_to_many_relation[session-async-tracked-psycopg_async_engine]
  '''
  SELECT DISTINCT
      ON (color.name) color.name,
         color.id,
         fruit_1.name AS name_1
    FROM color AS color
    LEFT OUTER JOIN fruit AS fruit_1
      ON color.id = fruit_1.color_id
   ORDER BY color.name ASC,
            fruit_1.name DESC
  '''
# ---
# name: test_distinct_on_ordered_by_an_unselected_to_many_relation[session-sync-tracked-psycopg_engine]
  '''
  SELECT DISTINCT
      ON (color.name) color.name,
         color.id,
         fruit_1.name AS name_1
    FROM color AS color
    LEFT OUTER JOIN fruit AS fruit_1
      ON color.id = fruit_1.color_id
   ORDER BY color.name ASC,
            fruit_1.name DESC
  '''
# ---
# name: test_distinct_on_ordered_by_an_unselected_to_many_relation[session-sync-tracked-sqlite_engine]
  '''
  SELECT color.name,
         color.id
    FROM (
          SELECT anon_1.id AS id,
                 anon_1.name AS name,
                 anon_1.name_1 AS name_1
            FROM (
                  SELECT color.id AS id,
                         color.name AS name,
                         fruit_1.name AS name_1,
                         row_number() OVER (PARTITION BY color.name ORDER BY color.name ASC, fruit_1.name DESC) AS anon_2
                    FROM color AS color
                    LEFT OUTER JOIN fruit AS fruit_1
                      ON color.id = fruit_1.color_id
                   ORDER BY color.name ASC,
                            fruit_1.name DESC
                 ) AS anon_1
           WHERE anon_1.anon_2 = ?
           ORDER BY anon_1.name ASC,
                    anon_1.name_1 DESC
         ) AS color
    LEFT OUTER JOIN fruit AS fruit_1
      ON color.id = fruit_1.color_id
   ORDER BY color.name ASC,
            fruit_1.name DESC
  '''
# ---
# name: test_distinct_on_paginates_distinct_rows[session-async-tracked-deterministic-ordering-aiosqlite_engine]
  '''
  SELECT user.name,
         user.id
    FROM (
          SELECT anon_1.id AS id,
                 anon_1.name AS name
            FROM (
                  SELECT user.id AS id,
                         user.name AS name,
                         row_number() OVER (PARTITION BY user.name ORDER BY user.id ASC) AS anon_2
                    FROM USER AS USER
                   ORDER BY user.id ASC
                 ) AS anon_1
           WHERE anon_1.anon_2 = ?
           ORDER BY anon_1.id ASC
           LIMIT ?
          OFFSET ?
         ) AS USER
   ORDER BY user.id ASC
  '''
# ---
# name: test_distinct_on_paginates_distinct_rows[session-async-tracked-deterministic-ordering-asyncmy_engine]
  '''
  SELECT user.name,
         user.id
    FROM (
          SELECT anon_1.id AS id,
                 anon_1.name AS name
            FROM (
                  SELECT user.id AS id,
                         user.name AS name,
                         row_number() OVER (PARTITION BY user.name ORDER BY user.id ASC) AS anon_2
                    FROM USER AS USER
                   ORDER BY user.id ASC
                 ) AS anon_1
           WHERE anon_1.anon_2 = %s
           ORDER BY anon_1.id ASC
           LIMIT %s,
                 %s
         ) AS USER
   ORDER BY user.id ASC
  '''
# ---
# name: test_distinct_on_paginates_distinct_rows[session-async-tracked-deterministic-ordering-asyncpg_engine]
  '''
  SELECT "user".name,
         "user".id
    FROM (
          SELECT anon_1.id AS id,
                 anon_1.name AS name
            FROM (
                  SELECT "user".id AS id,
                         "user".name AS name,
                         row_number() OVER (PARTITION BY "user".name ORDER BY "user".id ASC) AS anon_2
                    FROM "user" AS "user"
                   ORDER BY "user".id ASC
                 ) AS anon_1
           WHERE anon_1.anon_2 = $1::INTEGER
           ORDER BY anon_1.id ASC
           LIMIT $2::INTEGER
          OFFSET $3::INTEGER
         ) AS "user"
   ORDER BY "user".id ASC
  '''
# ---
# name: test_distinct_on_paginates_distinct_rows[session-async-tracked-deterministic-ordering-offset-aiosqlite_engine]
  '''
  SELECT user.name,
         user.id
    FROM (
          SELECT anon_1.id AS id,
                 anon_1.name AS name
            FROM (
                  SELECT user.id AS id,
                         user.name AS name,
                         row_number() OVER (PARTITION BY user.name ORDER BY user.id ASC) AS anon_2
                    FROM USER AS USER
                   ORDER BY user.id ASC
                 ) AS anon_1
           WHERE anon_1.anon_2 = ?
           ORDER BY anon_1.id ASC
           LIMIT ?
          OFFSET ?
         ) AS USER
   ORDER BY user.id ASC
  '''
# ---
# name: test_distinct_on_paginates_distinct_rows[session-async-tracked-deterministic-ordering-offset-asyncmy_engine]
  '''
  SELECT user.name,
         user.id
    FROM (
          SELECT anon_1.id AS id,
                 anon_1.name AS name
            FROM (
                  SELECT user.id AS id,
                         user.name AS name,
                         row_number() OVER (PARTITION BY user.name ORDER BY user.id ASC) AS anon_2
                    FROM USER AS USER
                   ORDER BY user.id ASC
                 ) AS anon_1
           WHERE anon_1.anon_2 = %s
           ORDER BY anon_1.id ASC
           LIMIT %s,
                 %s
         ) AS USER
   ORDER BY user.id ASC
  '''
# ---
# name: test_distinct_on_paginates_distinct_rows[session-async-tracked-deterministic-ordering-offset-asyncpg_engine]
  '''
  SELECT "user".name,
         "user".id
    FROM (
          SELECT anon_1.id AS id,
                 anon_1.name AS name
            FROM (
                  SELECT "user".id AS id,
                         "user".name AS name,
                         row_number() OVER (PARTITION BY "user".name ORDER BY "user".id ASC) AS anon_2
                    FROM "user" AS "user"
                   ORDER BY "user".id ASC
                 ) AS anon_1
           WHERE anon_1.anon_2 = $1::INTEGER
           ORDER BY anon_1.id ASC
           LIMIT $2::INTEGER
          OFFSET $3::INTEGER
         ) AS "user"
   ORDER BY "user".id ASC
  '''
# ---
# name: test_distinct_on_paginates_distinct_rows[session-async-tracked-deterministic-ordering-offset-psycopg_async_engine]
  '''
  SELECT "user".name,
         "user".id
    FROM (
          SELECT anon_1.id AS id,
                 anon_1.name AS name
            FROM (
                  SELECT "user".id AS id,
                         "user".name AS name,
                         row_number() OVER (PARTITION BY "user".name ORDER BY "user".id ASC) AS anon_2
                    FROM "user" AS "user"
                   ORDER BY "user".id ASC
                 ) AS anon_1
           WHERE anon_1.anon_2 = %(param_1)s::INTEGER
           ORDER BY anon_1.id ASC
           LIMIT %(param_2)s::INTEGER
          OFFSET %(param_3)s::INTEGER
         ) AS "user"
   ORDER BY "user".id ASC
  '''
# ---
# name: test_distinct_on_paginates_distinct_rows[session-async-tracked-deterministic-ordering-psycopg_async_engine]
  '''
  SELECT "user".name,
         "user".id
    FROM (
          SELECT anon_1.id AS id,
                 anon_1.name AS name
            FROM (
                  SELECT "user".id AS id,
                         "user".name AS name,
                         row_number() OVER (PARTITION BY "user".name ORDER BY "user".id ASC) AS anon_2
                    FROM "user" AS "user"
                   ORDER BY "user".id ASC
                 ) AS anon_1
           WHERE anon_1.anon_2 = %(param_1)s::INTEGER
           ORDER BY anon_1.id ASC
           LIMIT %(param_2)s::INTEGER
          OFFSET %(param_3)s::INTEGER
         ) AS "user"
   ORDER BY "user".id ASC
  '''
# ---
# name: test_distinct_on_paginates_distinct_rows[session-async-tracked-order-by-distinct-columns-aiosqlite_engine]
  '''
  SELECT user.name,
         user.id
    FROM (
          SELECT anon_1.id AS id,
                 anon_1.name AS name
            FROM (
                  SELECT user.id AS id,
                         user.name AS name,
                         row_number() OVER (PARTITION BY user.name ORDER BY user.name ASC, user.id DESC) AS anon_2
                    FROM USER AS USER
                   ORDER BY user.name ASC,
                            user.id DESC
                 ) AS anon_1
           WHERE anon_1.anon_2 = ?
           ORDER BY anon_1.name ASC,
                    anon_1.id DESC
           LIMIT ?
          OFFSET ?
         ) AS USER
   ORDER BY user.name ASC,
            user.id DESC
  '''
# ---
# name: test_distinct_on_paginates_distinct_rows[session-async-tracked-order-by-distinct-columns-asyncmy_engine]
  '''
  SELECT user.name,
         user.id
    FROM (
          SELECT anon_1.id AS id,
                 anon_1.name AS name
            FROM (
                  SELECT user.id AS id,
                         user.name AS name,
                         row_number() OVER (PARTITION BY user.name ORDER BY user.name ASC, user.id DESC) AS anon_2
                    FROM USER AS USER
                   ORDER BY user.name ASC,
                            user.id DESC
                 ) AS anon_1
           WHERE anon_1.anon_2 = %s
           ORDER BY anon_1.name ASC,
                    anon_1.id DESC
           LIMIT %s,
                 %s
         ) AS USER
   ORDER BY user.name ASC,
            user.id DESC
  '''
# ---
# name: test_distinct_on_paginates_distinct_rows[session-async-tracked-order-by-distinct-columns-asyncpg_engine]
  '''
  SELECT "user".name,
         "user".id
    FROM (
          SELECT DISTINCT
              ON ("user".name) "user".id AS id,
                 "user".name AS name
            FROM "user" AS "user"
           ORDER BY "user".name ASC,
                    "user".id DESC
           LIMIT $1::INTEGER
          OFFSET $2::INTEGER
         ) AS "user"
   ORDER BY "user".name ASC,
            "user".id DESC
  '''
# ---
# name: test_distinct_on_paginates_distinct_rows[session-async-tracked-order-by-distinct-columns-psycopg_async_engine]
  '''
  SELECT "user".name,
         "user".id
    FROM (
          SELECT DISTINCT
              ON ("user".name) "user".id AS id,
                 "user".name AS name
            FROM "user" AS "user"
           ORDER BY "user".name ASC,
                    "user".id DESC
           LIMIT %(param_1)s::INTEGER
          OFFSET %(param_2)s::INTEGER
         ) AS "user"
   ORDER BY "user".name ASC,
            "user".id DESC
  '''
# ---
# name: test_distinct_on_paginates_distinct_rows[session-sync-tracked-deterministic-ordering-offset-psycopg_engine]
  '''
  SELECT "user".name,
         "user".id
    FROM (
          SELECT anon_1.id AS id,
                 anon_1.name AS name
            FROM (
                  SELECT "user".id AS id,
                         "user".name AS name,
                         row_number() OVER (PARTITION BY "user".name ORDER BY "user".id ASC) AS anon_2
                    FROM "user" AS "user"
                   ORDER BY "user".id ASC
                 ) AS anon_1
           WHERE anon_1.anon_2 = %(param_1)s::INTEGER
           ORDER BY anon_1.id ASC
           LIMIT %(param_2)s::INTEGER
          OFFSET %(param_3)s::INTEGER
         ) AS "user"
   ORDER BY "user".id ASC
  '''
# ---
# name: test_distinct_on_paginates_distinct_rows[session-sync-tracked-deterministic-ordering-offset-sqlite_engine]
  '''
  SELECT user.name,
         user.id
    FROM (
          SELECT anon_1.id AS id,
                 anon_1.name AS name
            FROM (
                  SELECT user.id AS id,
                         user.name AS name,
                         row_number() OVER (PARTITION BY user.name ORDER BY user.id ASC) AS anon_2
                    FROM USER AS USER
                   ORDER BY user.id ASC
                 ) AS anon_1
           WHERE anon_1.anon_2 = ?
           ORDER BY anon_1.id ASC
           LIMIT ?
          OFFSET ?
         ) AS USER
   ORDER BY user.id ASC
  '''
# ---
# name: test_distinct_on_paginates_distinct_rows[session-sync-tracked-deterministic-ordering-psycopg_engine]
  '''
  SELECT "user".name,
         "user".id
    FROM (
          SELECT anon_1.id AS id,
                 anon_1.name AS name
            FROM (
                  SELECT "user".id AS id,
                         "user".name AS name,
                         row_number() OVER (PARTITION BY "user".name ORDER BY "user".id ASC) AS anon_2
                    FROM "user" AS "user"
                   ORDER BY "user".id ASC
                 ) AS anon_1
           WHERE anon_1.anon_2 = %(param_1)s::INTEGER
           ORDER BY anon_1.id ASC
           LIMIT %(param_2)s::INTEGER
          OFFSET %(param_3)s::INTEGER
         ) AS "user"
   ORDER BY "user".id ASC
  '''
# ---
# name: test_distinct_on_paginates_distinct_rows[session-sync-tracked-deterministic-ordering-sqlite_engine]
  '''
  SELECT user.name,
         user.id
    FROM (
          SELECT anon_1.id AS id,
                 anon_1.name AS name
            FROM (
                  SELECT user.id AS id,
                         user.name AS name,
                         row_number() OVER (PARTITION BY user.name ORDER BY user.id ASC) AS anon_2
                    FROM USER AS USER
                   ORDER BY user.id ASC
                 ) AS anon_1
           WHERE anon_1.anon_2 = ?
           ORDER BY anon_1.id ASC
           LIMIT ?
          OFFSET ?
         ) AS USER
   ORDER BY user.id ASC
  '''
# ---
# name: test_distinct_on_paginates_distinct_rows[session-sync-tracked-order-by-distinct-columns-psycopg_engine]
  '''
  SELECT "user".name,
         "user".id
    FROM (
          SELECT DISTINCT
              ON ("user".name) "user".id AS id,
                 "user".name AS name
            FROM "user" AS "user"
           ORDER BY "user".name ASC,
                    "user".id DESC
           LIMIT %(param_1)s::INTEGER
          OFFSET %(param_2)s::INTEGER
         ) AS "user"
   ORDER BY "user".name ASC,
            "user".id DESC
  '''
# ---
# name: test_distinct_on_paginates_distinct_rows[session-sync-tracked-order-by-distinct-columns-sqlite_engine]
  '''
  SELECT user.name,
         user.id
    FROM (
          SELECT anon_1.id AS id,
                 anon_1.name AS name
            FROM (
                  SELECT user.id AS id,
                         user.name AS name,
                         row_number() OVER (PARTITION BY user.name ORDER BY user.name ASC, user.id DESC) AS anon_2
                    FROM USER AS USER
                   ORDER BY user.name ASC,
                            user.id DESC
                 ) AS anon_1
           WHERE anon_1.anon_2 = ?
           ORDER BY anon_1.name ASC,
                    anon_1.id DESC
           LIMIT ?
          OFFSET ?
         ) AS USER
   ORDER BY user.name ASC,
            user.id DESC
  '''
# ---
# name: test_distinct_on_projects_every_aggregation_order_by_column[session-async-tracked-aiosqlite_engine]
  '''
  WITH anon_2 AS (
          SELECT sum(fruit_1.sweetness) AS sum_1,
                 max(fruit_1.sweetness) AS max_1,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.name,
         color.id,
         color.max_1
    FROM (
          SELECT anon_1.name AS name,
                 anon_1.id AS id,
                 anon_1.sum_1 AS sum_1,
                 anon_1.max_1 AS max_1
            FROM (
                  SELECT color.name AS name,
                         color.id AS id,
                         anon_2.sum_1 AS sum_1,
                         anon_2.max_1 AS max_1,
                         row_number() OVER (PARTITION BY color.name ORDER BY color.name ASC, anon_2.sum_1 ASC) AS anon_3
                    FROM color AS color
                    LEFT OUTER JOIN anon_2
                      ON color.id = anon_2.color_id
                   ORDER BY color.name ASC,
                            anon_2.sum_1 ASC
                 ) AS anon_1
           WHERE anon_1.anon_3 = ?
           ORDER BY anon_1.name ASC,
                    anon_1.sum_1 ASC
         ) AS color
   ORDER BY color.name ASC,
            color.sum_1 ASC
  '''
# ---
# name: test_distinct_on_projects_every_aggregation_order_by_column[session-async-tracked-asyncmy_engine]
  '''
  WITH anon_2 AS (
          SELECT sum(fruit_1.sweetness) AS sum_1,
                 max(fruit_1.sweetness) AS max_1,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.name,
         color.id,
         color.max_1
    FROM (
          SELECT anon_1.name AS name,
                 anon_1.id AS id,
                 anon_1.sum_1 AS sum_1,
                 anon_1.max_1 AS max_1
            FROM (
                  SELECT color.name AS name,
                         color.id AS id,
                         anon_2.sum_1 AS sum_1,
                         anon_2.max_1 AS max_1,
                         row_number() OVER (PARTITION BY color.name ORDER BY color.name ASC, anon_2.sum_1 ASC) AS anon_3
                    FROM color AS color
                    LEFT OUTER JOIN anon_2
                      ON color.id = anon_2.color_id
                   ORDER BY color.name ASC,
                            anon_2.sum_1 ASC
                 ) AS anon_1
           WHERE anon_1.anon_3 = %s
           ORDER BY anon_1.name ASC,
                    anon_1.sum_1 ASC
         ) AS color
   ORDER BY color.name ASC,
            color.sum_1 ASC
  '''
# ---
# name: test_distinct_on_projects_every_aggregation_order_by_column[session-async-tracked-asyncpg_engine]
  '''
  SELECT DISTINCT
      ON (color.name) color.name,
         color.id,
         anon_1.max_1,
         anon_1.sum_1
    FROM color AS color
    JOIN LATERAL (
          SELECT sum(fruit_1.sweetness) AS sum_1,
                 max(fruit_1.sweetness) AS max_1
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   ORDER BY color.name ASC,
            anon_1.sum_1 ASC
  '''
# ---
# name: test_distinct_on_projects_every_aggregation_order_by_column[session-async-tracked-psycopg_async_engine]
  '''
  SELECT DISTINCT
      ON (color.name) color.name,
         color.id,
         anon_1.max_1,
         anon_1.sum_1
    FROM color AS color
    JOIN LATERAL (
          SELECT sum(fruit_1.sweetness) AS sum_1,
                 max(fruit_1.sweetness) AS max_1
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   ORDER BY color.name ASC,
            anon_1.sum_1 ASC
  '''
# ---
# name: test_distinct_on_projects_every_aggregation_order_by_column[session-sync-tracked-psycopg_engine]
  '''
  SELECT DISTINCT
      ON (color.name) color.name,
         color.id,
         anon_1.max_1,
         anon_1.sum_1
    FROM color AS color
    JOIN LATERAL (
          SELECT sum(fruit_1.sweetness) AS sum_1,
                 max(fruit_1.sweetness) AS max_1
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   ORDER BY color.name ASC,
            anon_1.sum_1 ASC
  '''
# ---
# name: test_distinct_on_projects_every_aggregation_order_by_column[session-sync-tracked-sqlite_engine]
  '''
  WITH anon_2 AS (
          SELECT sum(fruit_1.sweetness) AS sum_1,
                 max(fruit_1.sweetness) AS max_1,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.name,
         color.id,
         color.max_1
    FROM (
          SELECT anon_1.name AS name,
                 anon_1.id AS id,
                 anon_1.sum_1 AS sum_1,
                 anon_1.max_1 AS max_1
            FROM (
                  SELECT color.name AS name,
                         color.id AS id,
                         anon_2.sum_1 AS sum_1,
                         anon_2.max_1 AS max_1,
                         row_number() OVER (PARTITION BY color.name ORDER BY color.name ASC, anon_2.sum_1 ASC) AS anon_3
                    FROM color AS color
                    LEFT OUTER JOIN anon_2
                      ON color.id = anon_2.color_id
                   ORDER BY color.name ASC,
                            anon_2.sum_1 ASC
                 ) AS anon_1
           WHERE anon_1.anon_3 = ?
           ORDER BY anon_1.name ASC,
                    anon_1.sum_1 ASC
         ) AS color
   ORDER BY color.name ASC,
            color.sum_1 ASC
  '''
# ---
# name: test_nested_distinct_on_and_order_by[session-async-tracked-aiosqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT anon_2.name AS name,
                 anon_2.id AS id,
                 anon_2.sweetness AS sweetness,
                 anon_2.color_id AS color_id,
                 dense_rank() OVER (PARTITION BY anon_2.color_id ORDER BY anon_2.sweetness ASC, anon_2.name DESC) AS rank
            FROM (
                  SELECT fruit_1.name AS name,
                         fruit_1.id AS id,
                         fruit_1.sweetness AS sweetness,
                         fruit_1.color_id AS color_id,
                         row_number() OVER (PARTITION BY fruit_1.color_id, fruit_1.sweetness ORDER BY fruit_1.sweetness ASC, fruit_1.name DESC) AS anon_3
                    FROM fruit AS fruit_1
                   WHERE fruit_1.color_id IS NOT NULL
                   GROUP BY fruit_1.color_id,
                            fruit_1.name,
                            fruit_1.id,
                            fruit_1.sweetness
                   ORDER BY fruit_1.sweetness ASC,
                            fruit_1.name DESC
                 ) AS anon_2
           WHERE anon_2.anon_3 = ?
         ) SELECT anon_1.name,
         anon_1.id,
         color.name AS name_1,
         color.id AS id_1
    FROM color AS color
    LEFT OUTER JOIN anon_1
      ON color.id = anon_1.color_id
   ORDER BY color.id ASC,
            anon_1.sweetness ASC,
            anon_1.name DESC
  '''
# ---
# name: test_nested_distinct_on_and_order_by[session-async-tracked-asyncmy_engine]
  '''
  WITH anon_1 AS (
          SELECT anon_2.name AS name,
                 anon_2.id AS id,
                 anon_2.sweetness AS sweetness,
                 anon_2.color_id AS color_id,
                 dense_rank() OVER (PARTITION BY anon_2.color_id ORDER BY anon_2.sweetness ASC, anon_2.name DESC) AS `rank`
            FROM (
                  SELECT fruit_1.name AS name,
                         fruit_1.id AS id,
                         fruit_1.sweetness AS sweetness,
                         fruit_1.color_id AS color_id,
                         row_number() OVER (PARTITION BY fruit_1.color_id, fruit_1.sweetness ORDER BY fruit_1.sweetness ASC, fruit_1.name DESC) AS anon_3
                    FROM fruit AS fruit_1
                   WHERE fruit_1.color_id IS NOT NULL
                   GROUP BY fruit_1.color_id,
                            fruit_1.name,
                            fruit_1.id,
                            fruit_1.sweetness
                   ORDER BY fruit_1.sweetness ASC,
                            fruit_1.name DESC
                 ) AS anon_2
           WHERE anon_2.anon_3 = %s
         ) SELECT anon_1.name,
         anon_1.id,
         color.name AS name_1,
         color.id AS id_1
    FROM color AS color
    LEFT OUTER JOIN anon_1
      ON color.id = anon_1.color_id
   ORDER BY color.id ASC,
            anon_1.sweetness ASC,
            anon_1.name DESC
  '''
# ---
# name: test_nested_distinct_on_and_order_by[session-async-tracked-asyncpg_engine]
  '''
  SELECT anon_1.name,
         anon_1.id,
         color.name AS name_1,
         color.id AS id_1
    FROM color AS color
    LEFT OUTER JOIN LATERAL (
          SELECT DISTINCT
              ON (fruit_1.sweetness) fruit_1.name AS name,
                 fruit_1.id AS id,
                 fruit_1.sweetness AS sweetness
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
           ORDER BY fruit_1.sweetness ASC,
                    fruit_1.name DESC
         ) AS anon_1
      ON TRUE
   ORDER BY color.id ASC,
            anon_1.sweetness ASC,
            anon_1.name DESC
  '''
# ---
# name: test_nested_distinct_on_and_order_by[session-async-tracked-psycopg_async_engine]
  '''
  SELECT anon_1.name,
         anon_1.id,
         color.name AS name_1,
         color.id AS id_1
    FROM color AS color
    LEFT OUTER JOIN LATERAL (
          SELECT DISTINCT
              ON (fruit_1.sweetness) fruit_1.name AS name,
                 fruit_1.id AS id,
                 fruit_1.sweetness AS sweetness
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
           ORDER BY fruit_1.sweetness ASC,
                    fruit_1.name DESC
         ) AS anon_1
      ON TRUE
   ORDER BY color.id ASC,
            anon_1.sweetness ASC,
            anon_1.name DESC
  '''
# ---
# name: test_nested_distinct_on_and_order_by[session-sync-tracked-psycopg_engine]
  '''
  SELECT anon_1.name,
         anon_1.id,
         color.name AS name_1,
         color.id AS id_1
    FROM color AS color
    LEFT OUTER JOIN LATERAL (
          SELECT DISTINCT
              ON (fruit_1.sweetness) fruit_1.name AS name,
                 fruit_1.id AS id,
                 fruit_1.sweetness AS sweetness
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
           ORDER BY fruit_1.sweetness ASC,
                    fruit_1.name DESC
         ) AS anon_1
      ON TRUE
   ORDER BY color.id ASC,
            anon_1.sweetness ASC,
            anon_1.name DESC
  '''
# ---
# name: test_nested_distinct_on_and_order_by[session-sync-tracked-sqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT anon_2.name AS name,
                 anon_2.id AS id,
                 anon_2.sweetness AS sweetness,
                 anon_2.color_id AS color_id,
                 dense_rank() OVER (PARTITION BY anon_2.color_id ORDER BY anon_2.sweetness ASC, anon_2.name DESC) AS rank
            FROM (
                  SELECT fruit_1.name AS name,
                         fruit_1.id AS id,
                         fruit_1.sweetness AS sweetness,
                         fruit_1.color_id AS color_id,
                         row_number() OVER (PARTITION BY fruit_1.color_id, fruit_1.sweetness ORDER BY fruit_1.sweetness ASC, fruit_1.name DESC) AS anon_3
                    FROM fruit AS fruit_1
                   WHERE fruit_1.color_id IS NOT NULL
                   GROUP BY fruit_1.color_id,
                            fruit_1.name,
                            fruit_1.id,
                            fruit_1.sweetness
                   ORDER BY fruit_1.sweetness ASC,
                            fruit_1.name DESC
                 ) AS anon_2
           WHERE anon_2.anon_3 = ?
         ) SELECT anon_1.name,
         anon_1.id,
         color.name AS name_1,
         color.id AS id_1
    FROM color AS color
    LEFT OUTER JOIN anon_1
      ON color.id = anon_1.color_id
   ORDER BY color.id ASC,
            anon_1.sweetness ASC,
            anon_1.name DESC
  '''
# ---
# name: test_nested_distinct_on_paginated[session-async-tracked-limit-aiosqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT anon_2.name AS name,
                 anon_2.id AS id,
                 anon_2.sweetness AS sweetness,
                 anon_2.color_id AS color_id,
                 dense_rank() OVER (PARTITION BY anon_2.color_id ORDER BY anon_2.sweetness ASC, anon_2.name ASC) AS rank
            FROM (
                  SELECT fruit_1.name AS name,
                         fruit_1.id AS id,
                         fruit_1.sweetness AS sweetness,
                         fruit_1.color_id AS color_id,
                         row_number() OVER (PARTITION BY fruit_1.color_id, fruit_1.sweetness ORDER BY fruit_1.sweetness ASC, fruit_1.name ASC) AS anon_3
                    FROM fruit AS fruit_1
                   WHERE fruit_1.color_id IS NOT NULL
                   GROUP BY fruit_1.color_id,
                            fruit_1.name,
                            fruit_1.id,
                            fruit_1.sweetness
                   ORDER BY fruit_1.sweetness ASC,
                            fruit_1.name ASC
                 ) AS anon_2
           WHERE anon_2.anon_3 = ?
         ) SELECT anon_1.name,
         anon_1.id,
         color.name AS name_1,
         color.id AS id_1
    FROM color AS color
    LEFT OUTER JOIN anon_1
      ON color.id = anon_1.color_id
     AND anon_1.rank <= ?
   ORDER BY color.id ASC,
            anon_1.sweetness ASC,
            anon_1.name ASC
  '''
# ---
# name: test_nested_distinct_on_paginated[session-async-tracked-limit-asyncmy_engine]
  '''
  WITH anon_1 AS (
          SELECT anon_2.name AS name,
                 anon_2.id AS id,
                 anon_2.sweetness AS sweetness,
                 anon_2.color_id AS color_id,
                 dense_rank() OVER (PARTITION BY anon_2.color_id ORDER BY anon_2.sweetness ASC, anon_2.name ASC) AS `rank`
            FROM (
                  SELECT fruit_1.name AS name,
                         fruit_1.id AS id,
                         fruit_1.sweetness AS sweetness,
                         fruit_1.color_id AS color_id,
                         row_number() OVER (PARTITION BY fruit_1.color_id, fruit_1.sweetness ORDER BY fruit_1.sweetness ASC, fruit_1.name ASC) AS anon_3
                    FROM fruit AS fruit_1
                   WHERE fruit_1.color_id IS NOT NULL
                   GROUP BY fruit_1.color_id,
                            fruit_1.name,
                            fruit_1.id,
                            fruit_1.sweetness
                   ORDER BY fruit_1.sweetness ASC,
                            fruit_1.name ASC
                 ) AS anon_2
           WHERE anon_2.anon_3 = %s
         ) SELECT anon_1.name,
         anon_1.id,
         color.name AS name_1,
         color.id AS id_1
    FROM color AS color
    LEFT OUTER JOIN anon_1
      ON color.id = anon_1.color_id
     AND anon_1.`rank` <= %s
   ORDER BY color.id ASC,
            anon_1.sweetness ASC,
            anon_1.name ASC
  '''
# ---
# name: test_nested_distinct_on_paginated[session-async-tracked-limit-asyncpg_engine]
  '''
  SELECT anon_1.name,
         anon_1.id,
         color.name AS name_1,
         color.id AS id_1
    FROM color AS color
    LEFT OUTER JOIN LATERAL (
          SELECT DISTINCT
              ON (fruit_1.sweetness) fruit_1.name AS name,
                 fruit_1.id AS id,
                 fruit_1.sweetness AS sweetness
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
           ORDER BY fruit_1.sweetness ASC,
                    fruit_1.name ASC
           LIMIT $1::INTEGER
         ) AS anon_1
      ON TRUE
   ORDER BY color.id ASC,
            anon_1.sweetness ASC,
            anon_1.name ASC
  '''
# ---
# name: test_nested_distinct_on_paginated[session-async-tracked-limit-offset-aiosqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT anon_2.name AS name,
                 anon_2.id AS id,
                 anon_2.sweetness AS sweetness,
                 anon_2.color_id AS color_id,
                 dense_rank() OVER (PARTITION BY anon_2.color_id ORDER BY anon_2.sweetness ASC, anon_2.name ASC) AS rank
            FROM (
                  SELECT fruit_1.name AS name,
                         fruit_1.id AS id,
                         fruit_1.sweetness AS sweetness,
                         fruit_1.color_id AS color_id,
                         row_number() OVER (PARTITION BY fruit_1.color_id, fruit_1.sweetness ORDER BY fruit_1.sweetness ASC, fruit_1.name ASC) AS anon_3
                    FROM fruit AS fruit_1
                   WHERE fruit_1.color_id IS NOT NULL
                   GROUP BY fruit_1.color_id,
                            fruit_1.name,
                            fruit_1.id,
                            fruit_1.sweetness
                   ORDER BY fruit_1.sweetness ASC,
                            fruit_1.name ASC
                 ) AS anon_2
           WHERE anon_2.anon_3 = ?
         ) SELECT anon_1.name,
         anon_1.id,
         color.name AS name_1,
         color.id AS id_1
    FROM color AS color
    LEFT OUTER JOIN anon_1
      ON color.id = anon_1.color_id
     AND anon_1.rank > ?
     AND anon_1.rank <= ?
   ORDER BY color.id ASC,
            anon_1.sweetness ASC,
            anon_1.name ASC
  '''
# ---
# name: test_nested_distinct_on_paginated[session-async-tracked-limit-offset-asyncmy_engine]
  '''
  WITH anon_1 AS (
          SELECT anon_2.name AS name,
                 anon_2.id AS id,
                 anon_2.sweetness AS sweetness,
                 anon_2.color_id AS color_id,
                 dense_rank() OVER (PARTITION BY anon_2.color_id ORDER BY anon_2.sweetness ASC, anon_2.name ASC) AS `rank`
            FROM (
                  SELECT fruit_1.name AS name,
                         fruit_1.id AS id,
                         fruit_1.sweetness AS sweetness,
                         fruit_1.color_id AS color_id,
                         row_number() OVER (PARTITION BY fruit_1.color_id, fruit_1.sweetness ORDER BY fruit_1.sweetness ASC, fruit_1.name ASC) AS anon_3
                    FROM fruit AS fruit_1
                   WHERE fruit_1.color_id IS NOT NULL
                   GROUP BY fruit_1.color_id,
                            fruit_1.name,
                            fruit_1.id,
                            fruit_1.sweetness
                   ORDER BY fruit_1.sweetness ASC,
                            fruit_1.name ASC
                 ) AS anon_2
           WHERE anon_2.anon_3 = %s
         ) SELECT anon_1.name,
         anon_1.id,
         color.name AS name_1,
         color.id AS id_1
    FROM color AS color
    LEFT OUTER JOIN anon_1
      ON color.id = anon_1.color_id
     AND anon_1.`rank` > %s
     AND anon_1.`rank` <= %s
   ORDER BY color.id ASC,
            anon_1.sweetness ASC,
            anon_1.name ASC
  '''
# ---
# name: test_nested_distinct_on_paginated[session-async-tracked-limit-offset-asyncpg_engine]
  '''
  SELECT anon_1.name,
         anon_1.id,
         color.name AS name_1,
         color.id AS id_1
    FROM color AS color
    LEFT OUTER JOIN LATERAL (
          SELECT DISTINCT
              ON (fruit_1.sweetness) fruit_1.name AS name,
                 fruit_1.id AS id,
                 fruit_1.sweetness AS sweetness
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
           ORDER BY fruit_1.sweetness ASC,
                    fruit_1.name ASC
           LIMIT $1::INTEGER
          OFFSET $2::INTEGER
         ) AS anon_1
      ON TRUE
   ORDER BY color.id ASC,
            anon_1.sweetness ASC,
            anon_1.name ASC
  '''
# ---
# name: test_nested_distinct_on_paginated[session-async-tracked-limit-offset-psycopg_async_engine]
  '''
  SELECT anon_1.name,
         anon_1.id,
         color.name AS name_1,
         color.id AS id_1
    FROM color AS color
    LEFT OUTER JOIN LATERAL (
          SELECT DISTINCT
              ON (fruit_1.sweetness) fruit_1.name AS name,
                 fruit_1.id AS id,
                 fruit_1.sweetness AS sweetness
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
           ORDER BY fruit_1.sweetness ASC,
                    fruit_1.name ASC
           LIMIT %(param_1)s::INTEGER
          OFFSET %(param_2)s::INTEGER
         ) AS anon_1
      ON TRUE
   ORDER BY color.id ASC,
            anon_1.sweetness ASC,
            anon_1.name ASC
  '''
# ---
# name: test_nested_distinct_on_paginated[session-async-tracked-limit-psycopg_async_engine]
  '''
  SELECT anon_1.name,
         anon_1.id,
         color.name AS name_1,
         color.id AS id_1
    FROM color AS color
    LEFT OUTER JOIN LATERAL (
          SELECT DISTINCT
              ON (fruit_1.sweetness) fruit_1.name AS name,
                 fruit_1.id AS id,
                 fruit_1.sweetness AS sweetness
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
           ORDER BY fruit_1.sweetness ASC,
                    fruit_1.name ASC
           LIMIT %(param_1)s::INTEGER
         ) AS anon_1
      ON TRUE
   ORDER BY color.id ASC,
            anon_1.sweetness ASC,
            anon_1.name ASC
  '''
# ---
# name: test_nested_distinct_on_paginated[session-sync-tracked-limit-offset-psycopg_engine]
  '''
  SELECT anon_1.name,
         anon_1.id,
         color.name AS name_1,
         color.id AS id_1
    FROM color AS color
    LEFT OUTER JOIN LATERAL (
          SELECT DISTINCT
              ON (fruit_1.sweetness) fruit_1.name AS name,
                 fruit_1.id AS id,
                 fruit_1.sweetness AS sweetness
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
           ORDER BY fruit_1.sweetness ASC,
                    fruit_1.name ASC
           LIMIT %(param_1)s::INTEGER
          OFFSET %(param_2)s::INTEGER
         ) AS anon_1
      ON TRUE
   ORDER BY color.id ASC,
            anon_1.sweetness ASC,
            anon_1.name ASC
  '''
# ---
# name: test_nested_distinct_on_paginated[session-sync-tracked-limit-offset-sqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT anon_2.name AS name,
                 anon_2.id AS id,
                 anon_2.sweetness AS sweetness,
                 anon_2.color_id AS color_id,
                 dense_rank() OVER (PARTITION BY anon_2.color_id ORDER BY anon_2.sweetness ASC, anon_2.name ASC) AS rank
            FROM (
                  SELECT fruit_1.name AS name,
                         fruit_1.id AS id,
                         fruit_1.sweetness AS sweetness,
                         fruit_1.color_id AS color_id,
                         row_number() OVER (PARTITION BY fruit_1.color_id, fruit_1.sweetness ORDER BY fruit_1.sweetness ASC, fruit_1.name ASC) AS anon_3
                    FROM fruit AS fruit_1
                   WHERE fruit_1.color_id IS NOT NULL
                   GROUP BY fruit_1.color_id,
                            fruit_1.name,
                            fruit_1.id,
                            fruit_1.sweetness
                   ORDER BY fruit_1.sweetness ASC,
                            fruit_1.name ASC
                 ) AS anon_2
           WHERE anon_2.anon_3 = ?
         ) SELECT anon_1.name,
         anon_1.id,
         color.name AS name_1,
         color.id AS id_1
    FROM color AS color
    LEFT OUTER JOIN anon_1
      ON color.id = anon_1.color_id
     AND anon_1.rank > ?
     AND anon_1.rank <= ?
   ORDER BY color.id ASC,
            anon_1.sweetness ASC,
            anon_1.name ASC
  '''
# ---
# name: test_nested_distinct_on_paginated[session-sync-tracked-limit-psycopg_engine]
  '''
  SELECT anon_1.name,
         anon_1.id,
         color.name AS name_1,
         color.id AS id_1
    FROM color AS color
    LEFT OUTER JOIN LATERAL (
          SELECT DISTINCT
              ON (fruit_1.sweetness) fruit_1.name AS name,
                 fruit_1.id AS id,
                 fruit_1.sweetness AS sweetness
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
           ORDER BY fruit_1.sweetness ASC,
                    fruit_1.name ASC
           LIMIT %(param_1)s::INTEGER
         ) AS anon_1
      ON TRUE
   ORDER BY color.id ASC,
            anon_1.sweetness ASC,
            anon_1.name ASC
  '''
# ---
# name: test_nested_distinct_on_paginated[session-sync-tracked-limit-sqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT anon_2.name AS name,
                 anon_2.id AS id,
                 anon_2.sweetness AS sweetness,
                 anon_2.color_id AS color_id,
                 dense_rank() OVER (PARTITION BY anon_2.color_id ORDER BY anon_2.sweetness ASC, anon_2.name ASC) AS rank
            FROM (
                  SELECT fruit_1.name AS name,
                         fruit_1.id AS id,
                         fruit_1.sweetness AS sweetness,
                         fruit_1.color_id AS color_id,
                         row_number() OVER (PARTITION BY fruit_1.color_id, fruit_1.sweetness ORDER BY fruit_1.sweetness ASC, fruit_1.name ASC) AS anon_3
                    FROM fruit AS fruit_1
                   WHERE fruit_1.color_id IS NOT NULL
                   GROUP BY fruit_1.color_id,
                            fruit_1.name,
                            fruit_1.id,
                            fruit_1.sweetness
                   ORDER BY fruit_1.sweetness ASC,
                            fruit_1.name ASC
                 ) AS anon_2
           WHERE anon_2.anon_3 = ?
         ) SELECT anon_1.name,
         anon_1.id,
         color.name AS name_1,
         color.id AS id_1
    FROM color AS color
    LEFT OUTER JOIN anon_1
      ON color.id = anon_1.color_id
     AND anon_1.rank <= ?
   ORDER BY color.id ASC,
            anon_1.sweetness ASC,
            anon_1.name ASC
  '''
# ---
